--- a/style/style.css
+++ b/style/style.css
@@ -3,5 +3,21 @@
     margin: 0px;
 }
 
+html {
+    width: 100vw;
+    height: 100vh;
+}
+
+body {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-content: stretch;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+}
 #container {
+	border: 1px solid #BBBBBB;
 }
