--- a/style/style.css
+++ b/style/style.css
@@ -18,6 +18,7 @@ body {
     width: 100vw;
     height: 100vh;
 }
-#container {
+.containers {
+    position: absolute;
 	border: 1px solid #BBBBBB;
 }
